--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Story By:
 
         <aside id="sidebar">
           <div>
-            <img src="images/pic.jpg">
+            <img src="pic.jpg"/>
           </div>
         </aside>
       </div>
