--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Story By:
 
         <aside id="sidebar">
           <div>
-            <img src="pic.jpg"/>
+            <img src="https://media.licdn.com/mpr/mpr/shrink_120_120/p/7/005/02c/350/1a2c4da.jpg"/>
           </div>
         </aside>
       </div>
